# Runova_BE

./: .dockerignore  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  art-config.json  constellation-style.json  docker-compose.prod.yml  docker-compose.yml  ormconfig.ts  package-lock.json  package.json  tsconfig.build.json  tsconfig.json
.gemini/: styleguide.md
.github/: CODEOWNERS
.github/workflows/: deploy.yml
api/: .dockerignore  package.json  tsconfig.build.json  tsconfig.json
api/src/: instrument.ts
api/test/: app.e2e-spec.ts
art/: CMakeLists.txt
art/src/: BgStar.h  BgStarFactory.cpp  BgStarFactory.h  BgStarPainter.cpp  BgStarPainter.h  BgStarStyle.h  BgStarTintFactory.cpp  BgStarTintFactory.h  ConstellationPainter.cpp  ConstellationPainter.h  ConstellationStyle.h  LinePainter.cpp  LinePainter.h  LineStyle.h  PathNormalizer.cpp  PathNormalizer.h
art/test/: PathNormalizerTest.cpp
pull/37/: reviews.md
scripts/: deploy.sh
src/: app.module.ts  data-source.ts  main.ts
src/art/: art.module.ts  art.options.ts  worker.ts
src/auth/: auth.controller.ts  auth.module.ts  auth.service.ts  google.service.ts  tokens.service.ts
src/community/: community.controller.ts  community.service.ts
src/config/: proj4.ts
src/constellations/: constellations.module.ts
src/courses/: courses.controller.ts  courses.module.ts
src/files/: files.controller.ts  files.service.ts
src/health/: health.controller.ts
src/migrations/: 1755421160468-Init.ts  1755586973715-Init.ts  1756105690233-Init.ts  1756111562059-Init.ts  1756115750324-Init.ts  1756621125664-AddUserTable.ts  1756621668713-Init.ts  1756694327472-Init.ts  1756695049376-Init.ts  1756951695806-Init.ts  (+8 more)
test/: app.e2e-spec.ts
(+411 files in other folders)
